--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,10 +23,13 @@
             android:minSdkVersion="9"
             android:targetSdkVersion="23"/>
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <uses-feature
             android:name="android.hardware.wifi"
@@ -37,14 +40,21 @@
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
+            android:supportsRtl="true"
             android:theme="@style/Theme.CastVideosTheme">
+
+        <meta-data
+            android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
+            android:value="com.google.sample.cast.refplayer.CastOptionsProvider"/>
+
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
 
         <activity
                 android:name="com.google.sample.cast.refplayer.VideoBrowserActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -86,9 +96,14 @@
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value="com.google.sample.cast.refplayer.VideoBrowserActivity"/>
         </activity>
-        <meta-data
-                android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
-                android:value="com.google.sample.cast.refplayer.CastOptionsProvider"/>
+
+        <service android:name="com.google.sample.cast.refplayer.VideoBrowserActivity$ListenerServiceFromWear">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER"/>
+
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
